upgrading to Java 17, Spring 1.6.2, Axon BOM 4.5.10